--- a/tests/plugin/meson.build
+++ b/tests/plugin/meson.build
@@ -1,17 +1,18 @@
 t = []
+omp = dependency('openmp')
 if get_option('plugins')
   foreach i : ['bb', 'empty', 'inline', 'insn', 'mem', 'syscall']
     if host_os == 'windows'
       t += shared_module(i, files(i + '.c') + '../../contrib/plugins/win32_linker.c',
                         include_directories: '../../include/qemu',
                         link_depends: [win32_qemu_plugin_api_lib],
-                        link_args: ['-Lplugins', '-lqemu_plugin_api'],
-                        dependencies: glib)
+                        link_args: ['-Lplugins', '-lqemu_plugin_api','-fopenmp'],
+                        dependencies: [glib,omp])
 
     else
       t += shared_module(i, files(i + '.c'),
                         include_directories: '../../include/qemu',
-                        dependencies: glib)
+                        dependencies: [glib,omp])
     endif
   endforeach
 endif
